--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     username: ${database.username}
     password: ${database.password}
 
+  messages:
+    basename: errors
+
 logging:
   level:
     root: info
