feat: 공통 설정 파일 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
   config:
     import:
       - database.yml
+      - common.yml
 
   datasource:
     driver-class-name: ${database.driver}
